# WorldCup26-ELO

./: .gitignore  README.md  main.py  pyproject.toml
src/: data.py  elo.py  viz.py  xp.py
