[project]
name = "wc26-elo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scipy",
    "soccerdata",
    "kagglehub",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
